--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -13,14 +13,14 @@ social:
   twitter: _swanson
   #facebook: zuck
   #tumblr: animalygifs
-  #linkedin: philipjagielski
+  linkedin: https://www.linkedin.com/in/yusuf-roohani-bb195231/
   #gplus: 110552447039675960964
   #gravatar: 86e6ff8f75f9daef42d53b7f8002fd95
   #flickr: johndoe
 
 # "Hi, I'm _______"
-name: Matt Swanson
-email: test@example.com
+name: Yusuf Roohani
+email: firstDOTlast@google.com
 tagline: "weak opinions, strongly held"
 
 # Google Analytics key, leave blank to ignore
