--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -10,13 +10,13 @@ social:
   hacker_news: swanson
   #stackexchange: 348619
   #stackoverflow: 348619
-  twitter: _swanson
-  #facebook: zuck
-  #tumblr: animalygifs
-  linkedin: https://www.linkedin.com/in/yusuf-roohani-bb195231/
-  #gplus: 110552447039675960964
-  #gravatar: 86e6ff8f75f9daef42d53b7f8002fd95
-  #flickr: johndoe
+  twitter: yusufroohani
+  facebook:
+  tumblr:
+  linkedin: yusuf-roohani-bb195231
+  gplus:
+  gravatar:
+  flickr:
 
 # "Hi, I'm _______"
 name: Yusuf Roohani
