some more things

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -24,10 +24,10 @@ email: firstDOTlast@google.com
 tagline: ""
 
 # Google Analytics key, leave blank to ignore
-google_analytics_key: UA-xxxx-x
+google_analytics_key: UA-128482722-1
 
 # Toggle "Postings are my own" disclaimer in footer
 show_disclaimer: true
 
 # Toggle link/icon to view atom feed (/atom.xml) in sidebar
-show_atom_feed: true
+show_atom_feed: false
