--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -20,7 +20,7 @@ social:
 
 # "Hi, I'm _______"
 name: Yusuf Roohani
-email: firstDOTlast@google.com
+email: yhr@csDOTstanford
 tagline: ""
 
 # Google Analytics key, leave blank to ignore
